zuul-core: fix generics on DefaultClientChannelManager